# pull-request-mailer

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  pull-request-mailer.cabal
executables/pull-request-mailer/: Main.hs
executables/pull-request-mailer-server/: Main.hs
src/Github/PullRequests/: Emailer.hs  Mailer.hs
src/Github/PullRequests/Emailer/: MsgId.hs  Opts.hs
src/Github/PullRequests/Mailer/: MsgId.hs  Opts.hs
